src/test/deca/context/invalid/if_var.deca
/*
    Description : Utilisation d'une variable int au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x =1;
    if (x){
        x = 2;
    }
}
